Fix some sizings for events on mobile and desktop

--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -26,7 +26,7 @@ body {
 
 p.dateline {
     text-align: center;
-    font-size: 125% !important;
+    font-size: 1.5vw !important;
 }
 
 .dateline a {
